# sigecoin

./: CMakeLists.txt  README.md  unix_build.sh  vs14_32_mt.cmd
db-4.8.30/: CMakeLists.txt
leveldb/: CMakeLists.txt
libevent/: CMakeLists.txt
libevent/cmake/: AddEventLibrary.cmake
libevent/include/event2/: visibility.h
secp256k1/: CMakeLists.txt  Makefile.am  libsecp256k1.pc.in
secp256k1/contrib/: lax_der_parsing.h
secp256k1/src/: tests.c
secp256k1/src/java/: sigecoin_NativeSecp256k1.c  sigecoin_NativeSecp256k1.h  sigecoin_Secp256k1Context.c  sigecoin_Secp256k1Context.h
sige/bench/: base58.cpp  bench.cpp  bench.h  bench_sigcoin.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  examples.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  rollingbloom.cpp  verify_script.cpp
sige/config/: sigeconfig.h  sigeconfig.h.in
sige/crypto/: aes.cpp  aes.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
sige/crypto/ctaes/: bench.c  ctaes.h
sige/node/: sigenode-cli-res.rc  sigenode-cli.cpp  sigenode-res.rc  sigenode-tx-res.rc  sigenode-tx.cpp  sigenode.cpp
sige/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  engine.cpp  engine.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.cpp  modaloverlay.h  networkstyle.cpp  networkstyle.h  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  (+72 more)
sige/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
sige/qt/locale/: sigecoin_af.ts  sigecoin_af_ZA.ts  sigecoin_ar.ts  sigecoin_be_BY.ts  sigecoin_bg.ts  sigecoin_bg_BG.ts  sigecoin_ca.ts  sigecoin_ca@valencia.ts  sigecoin_ca_ES.ts  sigecoin_cs.ts  sigecoin_cy.ts  sigecoin_da.ts  sigecoin_de.ts  sigecoin_el.ts  sigecoin_el_GR.ts  sigecoin_en.ts  sigecoin_en_GB.ts  sigecoin_eo.ts  sigecoin_es.ts  sigecoin_es_AR.ts  sigecoin_es_CL.ts  sigecoin_es_CO.ts  sigecoin_es_DO.ts  sigecoin_es_ES.ts  sigecoin_es_MX.ts  sigecoin_es_UY.ts  sigecoin_es_VE.ts  sigecoin_et.ts  sigecoin_et_EE.ts  sigecoin_eu_ES.ts  sigecoin_fa.ts  sigecoin_fa_IR.ts  sigecoin_fi.ts  sigecoin_fr.ts  sigecoin_fr_CA.ts  sigecoin_fr_FR.ts  sigecoin_gl.ts  sigecoin_he.ts  sigecoin_hi_IN.ts  sigecoin_hr.ts  (+46 more)
sige/qt/res/: sigecoin-qt-res.rc
sige/qt/test/: Makefile  compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h
sige/src/: addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.cpp  amount.h  base58.cpp  base58.h  base58string.cpp  base58string.h  baseuint.cpp  baseuint.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparams_1_mainnet.cpp  chainparams_2_testnet.cpp  chainparams_3_regtest.cpp  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  chainparamsutil.cpp  chainparamsutil.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_memusage.h  (+99 more)
sige/src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
sige/src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
sige/src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
sige/src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
sige/src/rpc/: blockchain.cpp  client.cpp  client.h  mining.cpp  misc.cpp  proto.cpp  proto.h  rawtransaction.cpp  register.h  rpcnet.cpp  server.cpp  server.h
sige/src/script/: interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_const.cpp  script_const.h  script_error.cpp  script_error.h  script_id.cpp  script_id.h  script_num.cpp  script_num.h  sigcache.cpp  sigcache.h  sigcoinconsensus.cpp  sigcoinconsensus.h  sign.cpp  sign.h  (+2 more)
sige/wallet/: accounting_entry.cpp  accounting_entry.h  coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  keypool.cpp  keypool.h  merkletx.cpp  merkletx.h  reservekey.cpp  reservekey.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  wallet_account.cpp  wallet_account.h  wallet_db.cpp  wallet_db.h  wallet_key.cpp  wallet_key.h  wallet_output.cpp  wallet_output.h  wallet_tx.cpp  wallet_tx.h  wallet_util.cpp  wallet_util.h
test/: DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisige_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  (+22 more)
test/data/: README.md  base58_keys_valid.json  bitcoin-util-test.json  script_tests.json
univalue/: univalue.cpp  univalue_escapes.h  univalue_read.cpp  univalue_utffilter.h  univalue_write.cpp
univalue/include/: univalue.h
(+24 files in other folders)
